BAEL-1869: Fix List.of